@@ -4,6 +4,7 @@
 
 === 0.5.1 ===
 * Added DynamicDelay DSP processing unit.
+* Fixed latency computation error for FIR and FFT modes of the filter.
 
 === 0.5.0 ===
 * Initial release.
